bugfix: css changes + fixed nav border flicker

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -182,9 +182,9 @@ menu ul::after {
 .c_header-text {
   font-size: 1.5rem;
   font-weight: bold;
-  margin-bottom: 1rem;
-  margin-right: 2rem;
-  margin-top: 0.3rem;
+  margin-bottom: 0.8rem;
+  margin-right: 1.5rem;
+  margin-top: 0.4rem;
 }
 
 .c_header__nav {
@@ -196,13 +196,12 @@ menu ul::after {
 
 .nav__item {
   color: var(--color-grad-4);
-
   cursor: pointer;
   padding: 0 2rem 1rem 2rem;
-  /* padding-bottom: 0.5rem; */
+  border-bottom: 4px solid var(--color-grad-1);
 }
 .nav__item-active {
-  border-bottom: 3px solid var(--color-secondary);
+  border-bottom: 4px solid var(--color-secondary);
 }
 
 .nav__item:hover {
@@ -231,8 +230,8 @@ menu ul::after {
 .task__btn-add {
   background-color: var(--color-grad-2);
   color: var(--color-white);
-  padding: 0.5rem;
-  font-size: 120%;
+  padding: 0.6rem 0.8rem;
+  font-size: 130%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 0.2rem;
   transition: 0.3s;
@@ -575,7 +574,6 @@ input[type='checkbox'] {
 
 .user__border {
   border: 2px solid var(--color-gray-light-3);
-  transition: 0.2s ease;
 }
 .user__border:hover {
   border: 2px solid var(--color-grad-3);
